test/integration/bad/tuples/bad_unpack1.stan
transformed data {
  int x = 3;
  real y = 4.0;
  (x, y) = (y, x);
}
